# catscii

./: .envrc  Cargo.toml  Dockerfile
src/: main.rs
