[package]
name = "catscii"
version = "0.2.0"
edition = "2021"
publish = ["catscii"]

[dependencies]
artem = { version = "3.0.0", default-features = false }
axum = "0.7.9"
color-eyre = "0.6.3"
image = "0.25.5"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-honeycomb = { git = "https://github.com/fasterthanlime/opentelemetry-honeycomb-rs", branch = "simplified", version = "0.1.0" }
pretty-hex = "0.4.1"
reqwest = { version = "0.12.9", features = ["json"] }
sentry = "0.34.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[profile.release]
debug = 1 # Include enough debug info for sentry to be useful
opt-level = "z"  # Optimize for size.
lto = true # Enable link-time optimization